fixed runner, pom, browser and added gitignore