@@ -20,9 +20,9 @@
           </plugins>
       </build>  -->
 
-         <properties>
-            <aspectj.version>1.8.10</aspectj.version>
-         </properties>
+    <properties>
+        <aspectj.version>1.8.10</aspectj.version>
+    </properties>
 
     <build>
         <plugins>
@@ -31,18 +31,33 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
-                    <argLine>
-                   <!--     javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"  -->
-                        -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm"
-                    </argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <systemProperties>
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>${project.build.directory}/allure-results</value>
+                        </property>
+                    </systemProperties>
+                    <includes>
+                        <include>**/runner.class</include>
+                    </includes>
                 </configuration>
                 <dependencies>
-                <dependency>
-                    <groupId>org.aspectj</groupId>
-                    <artifactId>aspectjweaver</artifactId>
-                    <version>${aspectj.version}</version>
-                </dependency>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>1.9.5</version>
+                    </dependency>
                 </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.10.0</version>
+                <configuration>
+                    <reportVersion>2.7.0</reportVersion>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -57,17 +72,15 @@
     </build>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
 
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.testng</groupId>
-                    <artifactId>testng</artifactId>
-                    <version>6.14.3</version>
-                    <scope>test</scope>
-                </dependency>
-
-                <!-- CUCUMBER -->
+        <!-- CUCUMBER -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
@@ -107,26 +120,26 @@
             <version>1.2.16</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber4-jvm -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber-jvm</artifactId>
+            <version>2.0-BETA6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.6.0</version>
+        </dependency>
 
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.aspectj/aspectjweaver &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.aspectj</groupId>-->
+        <!--            <artifactId>aspectjweaver</artifactId>-->
+        <!--            <version>1.8.10</version>-->
+        <!--        </dependency>-->
 
-
-
-                <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber4-jvm -->
-                <dependency>
-                    <groupId>io.qameta.allure</groupId>
-                    <artifactId>allure-cucumber4-jvm</artifactId>
-                    <version>2.13.1</version>
-                </dependency>
-
-                <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
-                <dependency>
-                    <groupId>org.aspectj</groupId>
-                    <artifactId>aspectjweaver</artifactId>
-                    <version>1.8.10</version>
-                </dependency>
-
-            </dependencies>
-
+    </dependencies>
 
 
 </project>
